# uni-remote

./: .editorconfig
.github/workflows/: build.yml
uni-page/: .prettierrc.json  index.html  package.json  tsconfig.app.json  vite.config.ts
uni-page/src/: main.ts
uni-page/src/assets/: main.scss  quasar-variables.sass
uni-page/src/layout/: MainLayout.vue
uni-page/src/pages/play-index/: define.ts  function.ts  index.vue  store.ts
uni-page/src/router/: index.ts
uni-server/: .editorconfig  .gitignore  Cargo.toml  Dockerfile
uni-server/src/: constants.rs  main.rs
uni-server/src/element/: mod.rs  sc.rs
uni-server/src/routes/: asset.rs  mod.rs  play.rs  repo.rs
uni-server/src/routes/api/: mod.rs
uni-server/src/util/: config.rs  etag.rs  extract.rs  mfs.rs  mod.rs  path_ext.rs
