[package]
name = "uni-server"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Rhynia <rhynia_v@outlook.com>"]

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.8" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = "0.4"
bon = "3"
serde_yaml = "0.9.34"
