[package]
name = "uni-server"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Rhynia <rhynia_v@outlook.com>"]

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = { version = "0.8" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
bincode = { version = "2", features = ["serde"] }
toml = "0.8"
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
chrono = "0.4"
lazy_static = "1"
rust-embed = "8"
